@@ -15,7 +15,9 @@
         <setting id="id-iso" type="text" label="32054" default="/dvdrip/iso" />
         <setting id="id-dvd" type="text" label="32055" default="/dvdrip/dvd" />    
         <setting id="id-bluray" type="text" label="32056" default="/dvdrip/bluray" />  
-       
+        <setting id="id-vobcopy" type="text" label="32072" default="/dvdrip/vobcopy" />
+        <setting id="id-network" type="text" label="32073" default="/dvdrip/network" />          
+
         <!-- Various Settings  -->
 
         <setting id="separator" type="lsep" label="32057"/> 
